Function to loop event listeners for buttons. Creation of delete and complete methods

--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
                 <button class="completed"><i class="far fa-check-square"></i></button>
                 <button class="delete"><i class="far fa-trash-alt"></i></button>
             </div>
+            <div class="todo-item">
+                <li>example to do list</li>
+                <button class="completed"><i class="far fa-check-square"></i></button>
+                <button class="delete"><i class="far fa-trash-alt"></i></button>
+            </div>
+            <div class="todo-item">
+                <li>example to do list</li>
+                <button class="completed"><i class="far fa-check-square"></i></button>
+                <button class="delete"><i class="far fa-trash-alt"></i></button>
+            </div>
+            <div class="todo-item">
+                <li>example to do list</li>
+                <button class="completed"><i class="far fa-check-square"></i></button>
+                <button class="delete"><i class="far fa-trash-alt"></i></button>
+            </div>
         </ul>
     </div>
 <body>
