EventListeners and functions for drag events.

--- a/index.html
+++ b/index.html
@@ -21,28 +21,14 @@
     </form>
     <div class="todo-container">
         <ul class="todo-list">
-            <div class="todo-item">
-                <li>example to do list</li>
-                <button class="completed"><i class="far fa-check-square"></i></button>
-                <button class="delete"><i class="far fa-trash-alt"></i></button>
-            </div>
-            <div class="todo-item">
-                <li>example to do list</li>
-                <button class="completed"><i class="far fa-check-square"></i></button>
-                <button class="delete"><i class="far fa-trash-alt"></i></button>
-            </div>
-            <div class="todo-item">
-                <li>example to do list</li>
-                <button class="completed"><i class="far fa-check-square"></i></button>
-                <button class="delete"><i class="far fa-trash-alt"></i></button>
-            </div>
-            <div class="todo-item">
+            <div class="todo-item" draggable="true">
                 <li>example to do list</li>
                 <button class="completed"><i class="far fa-check-square"></i></button>
                 <button class="delete"><i class="far fa-trash-alt"></i></button>
             </div>
         </ul>
     </div>
+    <button class="drag">DRAG</button>
 <body>
     <script src="list.js"></script>
 </body>
